--- a/client/package.json
+++ b/client/package.json
@@ -15,5 +15,12 @@
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
     "vite": "^7.1.1"
-  }
+  },
+  "root": "client",
+  "builds": [
+    {
+      "src": "client/**",
+      "use": "@vercel/static-build"
+    }
+  ]
 }
