--- a/vercel.json
+++ b/vercel.json
@@ -2,26 +2,28 @@
   "version": 2,
   "builds": [
     {
-      "src": "client/**",
+      "src": "client/package.json",
       "use": "@vercel/static-build",
-      "config": { 
-        "distDir": "dist",
-        "cleanDistDir": true
+      "config": {
+        "distDir": "dist"
       }
     },
     {
-      "src": "server/**",
+      "src": "server/package.json",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/server/index.js"
+      "dest": "/server"
     },
     {
       "src": "/(.*)",
-      "dest": "/client/dist/index.html"
+      "dest": "/client/dist/$1",
+      "headers": {
+        "Cache-Control": "s-maxage=0"
+      }
     }
   ]
 }
